--- a/index.html
+++ b/index.html
@@ -11,7 +11,71 @@
 </head>
 
 <body>
+    <section id="home">
+        <div class="container">
+            <nav class="navbar navbar-default transparent-bg">
+                <div class="container-fluid">
+                    <!-- Brand and toggle get grouped for better mobile display -->
+                    <div class="navbar-header flex-container-center m-t-30">
+                        <a href="#home" class="flex-item-center">
+                            <img src="src/images/logo.svg" class="logo m-l-15" alt="Nava logo">
+                        </a>
+                        <button type="button" class="navbar-toggle collapsed flex-item-center m-r-15 m-t-0 m-b-0" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                                <span class="sr-only">Toggle navigation</span>
+                                <span class="icon-bar"></span>
+                                <span class="icon-bar"></span>
+                                <span class="icon-bar"></span>
+                              </button>
+                    </div>
 
+                    <!-- Collect the nav links, forms, and other content for toggling -->
+                    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                        <ul class="nav navbar-nav navbar-right menu">
+                            <li class="active"><a href="#destinations">TOP DESTINATIONS</a></li>
+                            <li><a href="#addboat">ADD YOUR BOAT</a></li>
+                            <li>
+                                <!-- Button trigger modal -->
+                                <button type="button" data-toggle="modal" data-target="#myModal" class="btn btn-default navbar-btn p-l-25 p-r-25 signup-btn">
+                                   Sign Up
+                               </button>
+
+                                <!-- Modal -->
+                                <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+                                    <div class="modal-dialog" role="document">
+                                        <div class="modal-content">
+                                            <div class="modal-header">
+                                                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+
+                                            </div>
+                                            <div class="modal-body">
+
+                                                <h1>Search</h1>
+                                                <form class="navbar-form " role="search">
+                                                    <div class="form-group">
+                                                        <input type="text" class="form-control" placeholder="Search">
+                                                    </div>
+                                                    <button type="submit" class="btn btn-default">Submit</button>
+                                                </form>
+
+
+                                            </div>
+
+
+                                        </div>
+                                    </div>
+                                </div>
+
+
+                            </li>
+                        </ul>
+                    </div>
+                    <!-- /.navbar-collapse -->
+                </div>
+                <!-- /.container-fluid -->
+            </nav>
+
+        </div>
+    </section>
     <!-- /container -->
     <!-- main scripts -->
     <script src="dist/scripts/main.js"></script>
